--- a/back_end/pom.xml
+++ b/back_end/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.37</version>
+      <version>5.1.35</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -91,6 +91,11 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>2.5.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
       <version>2.5.4</version>
     </dependency>
     <dependency>
