--- a/back_end/src/main/resources/jdbc.properties
+++ b/back_end/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 #
 #JDBC connection properties
 #
-jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/mcs_system?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
 jdbc.username=root
 jdbc.password=666666
