后端增加可以接收前端传经纬度的功能

--- a/back_end/src/main/webapp/WEB-INF/web.xml
+++ b/back_end/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
     <!-- 配置DispatcherServlet -->
     <servlet>
-        <servlet-name>masterPro-dispatcher</servlet-name>
+        <servlet-name>sunhongbin-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- 配置springMVC需要加载的配置文件
              spring-dao.xml,spring-service.xml,spring-web.xml
@@ -20,7 +20,7 @@
         </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>masterPro-dispatcher</servlet-name>
+        <servlet-name>sunhongbin-dispatcher</servlet-name>
         <!-- 默认匹配所有的请求 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
