--- a/noise_detect_app/app/src/main/AndroidManifest.xml
+++ b/noise_detect_app/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,12 +15,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity">
+            android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="me.daei.soundmeter.activity.LoginActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="me.daei.soundmeter.activity.SignupActivity" android:theme="@style/AppTheme.Dark" />
     </application>
+
 </manifest>
