--- a/noise_detect_app/app/build.gradle
+++ b/noise_detect_app/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "me.daei.soundmeter"
+        applicationId "com.sunhongbin.noiseDetect"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
@@ -21,11 +21,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
     api group: 'com.android.support', name: 'appcompat-v7', version: '26.1.0'
     api group: 'com.android.support', name: 'design', version: '26.1.0'
     api group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
@@ -33,4 +36,7 @@ dependencies {
     //bind findbyid
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //baidu map
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
