--- a/noise_detect_app/app/src/main/AndroidManifest.xml
+++ b/noise_detect_app/app/src/main/AndroidManifest.xml
@@ -1,29 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.daei.soundmeter">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    package="com.sunhongbin.noiseDetect">
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- location -->
+    //获取设备网络状态，禁用后无法获取网络状态
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    //网络权限，当禁用后，无法进行检索等相关业务
+    <uses-permission android:name="android.permission.INTERNET"/>
+    //读取设备硬件信息，统计数据
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    //读取系统信息，包含系统版本等信息，用作统计
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    //获取设备的网络状态，鉴权所需网络代理
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    //允许sd卡写权限，需写入地图数据，禁用后无法显示地图
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    //获取统计数据
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    //使用步行AR导航，配置Camera权限
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name="com.sunhongbin.noiseDetect.activity.LocationApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- 声明service组件 -->
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
+
+        <!-- AK鉴权 -->
+        <!-- meta-data需要写在application中 -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="g8hhVaprD3mwHmt5Rqps5Gl7SQ8sGWY2" />  <!-- http://lbsyun.baidu.com/apiconsole/key -->
+
         <activity
             android:screenOrientation="portrait"
-            android:name=".activity.MainActivity">
+            android:name="com.sunhongbin.noiseDetect.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="me.daei.soundmeter.activity.LoginActivity" android:theme="@style/AppTheme.Dark" />
-        <activity android:name="me.daei.soundmeter.activity.SignupActivity" android:theme="@style/AppTheme.Dark" />
+
+        <activity android:name="com.sunhongbin.noiseDetect.activity.LoginActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="com.sunhongbin.noiseDetect.activity.SignupActivity" android:theme="@style/AppTheme.Dark" />
     </application>
 
 </manifest>
