--- a/noise_detect_app/app/build.gradle
+++ b/noise_detect_app/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     api group: 'com.android.support', name: 'appcompat-v7', version: '26.1.0'
     api group: 'com.android.support', name: 'design', version: '26.1.0'
     api group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
-    api 'com.google.code.gson:gson:2.8.1'
+    api 'com.google.code.gson:gson:2.8.2'
     // bind findbyid
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -51,5 +51,7 @@ dependencies {
     api 'com.contrarywind:Android-PickerView:4.1.6'
     //listView侧滑(删除等)效果
     api 'com.baoyz.swipemenulistview:library:1.3.0'
+    //搜索插件
+    api 'com.quinny898.library.persistentsearch:library:1.1.0-SNAPSHOT'
 
 }
