--- a/noise_detect_app/build.gradle
+++ b/noise_detect_app/build.gradle
@@ -17,6 +17,7 @@ allprojects {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
 task clean(type: Delete) {
