--- a/noise_detect_app/app/src/main/AndroidManifest.xml
+++ b/noise_detect_app/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
 
         <activity android:name="com.sunhongbin.noiseDetect.activity.AboutActivity"/>
         <activity android:name="com.sunhongbin.noiseDetect.activity.GetTaskActivity"/>
+        <activity android:name="com.sunhongbin.noiseDetect.activity.HeatMapActivity"/>
         <activity android:name="com.sunhongbin.noiseDetect.activity.LoginActivity" android:theme="@style/AppTheme.Dark" />
         <activity android:name="com.sunhongbin.noiseDetect.activity.PublishTaskActivity"/>
         <activity android:name="com.sunhongbin.noiseDetect.activity.SearchActivity"/>
